--- a/test/Makemodule.am
+++ b/test/Makemodule.am
@@ -4,7 +4,10 @@ EXTRA_PROGRAMS += nups_test
 TESTS += nups_test
 
 nups_test_SOURCES = \
-	test/nups_test.cpp
+	test/nups_test.cpp \
+	test/common.cpp \
+	test/using_valarrays.cpp \
+	test/using_vectors.cpp
 
 nups_test_LDADD = $(BOOST_UNIT_TEST_FRAMEWORK_LIB) libnups.la
 
