--- a/test/Makemodule.am
+++ b/test/Makemodule.am
@@ -6,8 +6,9 @@ TESTS += nups_test
 nups_test_SOURCES = \
 	test/nups_test.cpp \
 	test/common.cpp \
-	test/using_valarrays.cpp \
-	test/using_vectors.cpp
+	test/using_vectors.cpp \
+	test/using_valarrays.cpp
+	
 
 nups_test_LDADD = $(BOOST_UNIT_TEST_FRAMEWORK_LIB) libnups.la
 
